# piglot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-gateway.txt  requirements.txt
config/: config.yaml.example  proxy_services.json.example
gateway/: .env.example  Dockerfile  docker-compose.yml  run.py
scripts/: install-spotifyd.sh  setup.sh
src/: __init__.py  config.py  main.py
src/audio/: __init__.py  capture.py  playback.py  wake_word.py
src/brain/: __init__.py  conversation.py  engine.py  prompts.py
src/gateway/: __init__.py  client.py  server.py
src/hardware/: __init__.py  button.py  leds.py
src/intents/: __init__.py  executor.py  extractor.py  schema.py
src/learning/: __init__.py  exercises.py  tracker.py  vocabulary.py
src/proxy/: __init__.py  firewall.py  gateway.py
src/spotify/: __init__.py  client.py  player.py
src/stt/: engine.py  whisper_api.py  whisper_local.py
src/tts/: edge_tts.py  elevenlabs.py  engine.py
systemd/: piglot.service
